# CSRT

./: CMakeLists.txt  Makefile  README.md  csrt.cpp  featureColorName_.cpp  feature_.hpp  header.hpp  precomp_.hpp  trackerCSRTScaleEstimation_.cpp  trackerCSRTScaleEstimation_.hpp  trackerCSRTSegmentation_.hpp  trackerCSRTUtils_.cpp  trackerCSRTUtils_.hpp  trackerCSRT_.cpp  trackerCSRTm.cpp  tracker_.cpp  tracker_.hpp
header/: header.hpp  trackerCSRTSegmentation_.hpp  trackerCSRTm.hpp  tracker_c.h
src/: csrt.c  csrt.cpp  trackerCSRTSegmentation_.cpp  tracker_c.cpp
